# opengris-scaler

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  ReadMeOCI.Md  _repro_accept.py  _repro_churn.py  _repro_none.py  pyproject.toml  requirements.txt  run_vm_worker_adapter.py  run_worker_adapter_aws_batch.py  run_worker_manager_native.py  test.py
src/cpp/scaler/: CMakeLists.txt
src/cpp/scaler/error/: error.h
src/cpp/scaler/event/: CMakeLists.txt  async.cpp  async.h  error.cpp  error.h  handle.h  loop.cpp  loop.h  signal.cpp  signal.h  timer.cpp  timer.h
src/cpp/scaler/logging/: logging.h
src/cpp/scaler/object_storage/: object_manager.cpp  object_storage_server.cpp  object_storage_server.h
src/cpp/scaler/utility/: CMakeLists.txt  error.h  io_helpers.cpp  io_helpers.h  move_only_function.h  timestamp.h
src/cpp/scaler/uv/: CMakeLists.txt  async.cpp  async.h  callback.h  error.cpp  error.h  handle.h  loop.cpp  loop.h  request.h  signal.cpp  signal.h  socket_address.cpp  stream.h  (+5 more)
tests/: CMakeLists.txt  aws_batch_test_harness.py  aws_hpc_test_harness.py  test_balance.py  test_capabilities.py  test_client.py  test_cluster.py  test_cluster_disconnect.py  test_config.py  test_death_timeout.py  test_future.py  test_graph.py  test_nested_task.py  test_preload_module.py  test_profiling.py  test_protected.py  test_scaling.py  test_scheduler_config.py  test_serializer.py  test_ui.py
tests/cc_ymq/: CMakeLists.txt  common.h  packed_buffer.h  passthrough.py  reconnect.h  reconnect.py  reconnect_mitm.py  scapyscript  slow.h  tcp.h  test_cc_ymq.cpp  test_packed_buffer.cpp  test_rawsock.cpp
tests/cc_ymq/py_mitm/: core.py  drop.py  main.py  passthrough.py  randomly_drop_packets.py  runner.py  send_rst_to_client.py
tests/cc_ymq/unused/: client.py  packed_buffer.h  raw_socket.h  server.py  tcp.h
tests/client/: test_actor.py  test_bridge.py  test_client.py  test_future.py  test_future_await.py  test_object_buffer.py
tests/client/agent/: test_heartbeat_manager.py
tests/cluster/: test_cluster_disconnect.py
tests/compat/: test_ray_compat.py
tests/config/: test_config_class.py  test_config_types.py  test_oci_raw_worker_manager_config.py  test_scheduler_config.py  test_worker_config.py
tests/config/common/: test_worker_manager.py
tests/core/: test_death_timeout.py  test_protected.py
tests/cpp/: CMakeLists.txt
tests/cpp/event/: CMakeLists.txt  test_event.cpp
tests/cpp/logging/: test_logging.cpp
tests/cpp/object_storage/: CMakeLists.txt  test_object_manager.cpp  test_object_storage_server.cpp
tests/cpp/utility/: CMakeLists.txt  test_io_helpers.cpp  test_pipe.cpp
tests/cpp/uv/: CMakeLists.txt  test_tcp.cpp  test_uv.cpp  utility.h
tests/cpp/uv_ymq/: CMakeLists.txt  test_binder_socket.cpp  test_message_connection.cpp  test_mitm.cpp  test_sockets.cpp  test_sync.cpp  test_uv_ymq.cpp
tests/cpp/ymq/: CMakeLists.txt  test_binder_socket.cpp  test_connector_socket.cpp  test_mitm.cpp  test_sockets.cpp  test_sync.cpp  test_ymq.cpp
tests/entry_points/: test_all.py  test_scaler_shutdown.py  test_worker_manager.py  test_worker_manager_oci_hpc.py
tests/graph/: test_graph.py
tests/integration/: README.md  __init__.py  _aws_backend.py  _container_backend.py  _container_image.py  _container_runtime.py  _ec2_backend.py  _ecs_backend.py  _floci.py  _harness.py  _tasks.py  backends.py  docker.py  ec2.Dockerfile  ecs.Dockerfile  ecs_entrypoint.sh  floci.py  framework.py  harness.py  scenarios.py  test_batch_provisioning.py  test_batch_provisioning_moto.py  test_container_scaling_e2e.py  test_cross_backend_waterfall_e2e.py  test_dynamic_local_e2e.py  test_ec2_orb_provisioning.py  test_ec2_scaling_e2e.py  test_ecs_provisioning.py  test_ecs_provisioning_moto.py  test_ecs_scaling_e2e.py  test_process_scaling_e2e.py  test_scaling.py  test_scaling_stress_e2e.py  worker.Dockerfile
tests/integration/e2e/: __init__.py  backends.py  framework.py  matrix.py  scenarios.py  tasks.py  test_scaling.py
tests/io/: test_sync_subscriber.py  test_ymq_async_binder.py  test_ymq_parity.py  test_ymq_wasm.py
tests/io/uv_ymq/: test_sockets.py
tests/io/ymq/: test_logging.cpp  test_sockets.py  test_websocket_transport.py
tests/object_storage/: CMakeLists.txt  test_logging.cpp  test_object_manager.cpp  test_object_storage_server.cpp  test_redis_backend.py
tests/protocol/: test_capnp.py
tests/pymod_ymq/: config.py  test_pymod_ymq.py  test_types.py
tests/scheduler/: test_actor_controller.py  test_balance.py  test_balance_controller.py  test_capabilities.py  test_capability_allocate_policy.py  test_client_timeout_skips_busy_clients.py  test_graph_controller.py  test_object_controller.py  test_scale_down_cooldown.py  test_scaling.py  test_task_controller.py  test_waterfall_scaling.py  test_worker_controller.py
tests/serializer/: test_serializer.py
tests/ui/: test_capnp_ui_compat.py  test_color_picker.py
tests/utility/: test_cooldown.py  test_event_loop.py  test_exitcode.py  test_memory.py  test_pending_call.py  test_process_bootstrap.py  test_process_signal.py  test_serialization.py  utility.py
tests/wasm/: test_jupyterlite.py  test_jupyterlite_smoke.py
tests/worker/: test_processor_control_thread.py  test_worker.py
tests/worker/agent/: test_processor_manager.py
tests/worker_adapter/aws_hpc/: .scaler_aws_batch_config.json  .scaler_aws_hpc.env  run_tests.sh
tests/worker_adapters/: __init__.py  test_orb_adapter.py
tests/worker_manager_adapter/: test_capacity_coordinator.py  test_common.py  test_task_manager.py  test_worker_manager_core.py  test_worker_manager_runner.py
tests/worker_manager_adapter/aws_hpc/: aws_hpc_test_harness.py  test_batch_provisioner.py
tests/worker_manager_adapter/aws_raw/: test_ecs_provisioner.py
tests/worker_manager_adapter/baremetal/: test_native_provisioner.py
tests/worker_manager_adapter/oci_hpc/: oci_hpc_test_harness.py
tests/worker_manager_adapter/orb_aws_ec2/: test_orb_provisioner.py  test_worker_manager.py
tests/worker_manager_adapter/symphony/: test_symphony_provisioner.py
(+605 files in other folders)
